azurermps/1.7.0/AzureRM.Network/AzureRM.Network.md
---
Module Name: AzureRM.Network
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.10.0
Locale: en-US
ms.assetid: 83BBDBDC-152D-4F94-B947-802C408952DC
updated_at: 11/11/2016 23:11 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v1.0.13/AzureRM.Network.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v1.0.13/AzureRM.Network.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: false
Add-AzureRmApplicationGatewayAuthenticationCertificate: Application Gateway
Add-AzureRmApplicationGatewayBackendAddressPool: Application Gateway
Add-AzureRmApplicationGatewayBackendHttpSettings: Application Gateway
Add-AzureRmApplicationGatewayFrontendIPConfig: Application Gateway
Add-AzureRmApplicationGatewayFrontendPort: Application Gateway
Add-AzureRmApplicationGatewayHttpListener: Application Gateway
Add-AzureRmApplicationGatewayIPConfiguration: Application Gateway
Add-AzureRmApplicationGatewayProbeConfig: Application Gateway
Add-AzureRmApplicationGatewayRequestRoutingRule: Application Gateway
Add-AzureRmApplicationGatewaySslCertificate: Application Gateway
Add-AzureRmApplicationGatewayUrlPathMapConfig: Application Gateway
Add-AzureRmExpressRouteCircuitAuthorization: Express Route
Add-AzureRmExpressRouteCircuitPeeringConfig: Express Route
Add-AzureRmLoadBalancerBackendAddressPoolConfig: Load Balancer
Add-AzureRmLoadBalancerFrontendIpConfig: Load Balancer
Add-AzureRmLoadBalancerInboundNatPoolConfig: Load Balancer
Add-AzureRmLoadBalancerInboundNatRuleConfig: Load Balancer
Add-AzureRmLoadBalancerProbeConfig: Load Balancer
Add-AzureRmLoadBalancerRuleConfig: Load Balancer
Add-AzureRmNetworkInterfaceIpConfig: Networking
Add-AzureRmNetworkSecurityRuleConfig: Networking
Add-AzureRmRouteConfig: Route
Add-AzureRmRouteFilterRuleConfig: Route
Add-AzureRmVirtualNetworkGatewayIpConfig: Virtual Network
Add-AzureRmVirtualNetworkPeering: Virtual Network
Add-AzureRmVirtualNetworkSubnetConfig: Virtual Network
Add-AzureRmVpnClientRevokedCertificate: VPN
Add-AzureRmVpnClientRootCertificate: VPN
Get-AzureRmApplicationGateway: Application Gateway
Get-AzureRmApplicationGatewayAuthenticationCertificate: Application Gateway
Get-AzureRmApplicationGatewayBackendAddressPool: Application Gateway
Get-AzureRmApplicationGatewayBackendHealth: Application Gateway
Get-AzureRmApplicationGatewayBackendHttpSettings: Application Gateway
Get-AzureRmApplicationGatewayConnectionDraining: Application Gateway
Get-AzureRmApplicationGatewayFrontendIPConfig: Application Gateway
Get-AzureRmApplicationGatewayFrontendPort: Application Gateway
Get-AzureRmApplicationGatewayHttpListener: Application Gateway
Get-AzureRmApplicationGatewayIPConfiguration: Application Gateway
Get-AzureRmApplicationGatewayProbeConfig: Application Gateway
Get-AzureRmApplicationGatewayRequestRoutingRule: Application Gateway
Get-AzureRmApplicationGatewaySku: Application Gateway
Get-AzureRmApplicationGatewaySslCertificate: Application Gateway
Get-AzureRmApplicationGatewaySslPolicy: Application Gateway
Get-AzureRmApplicationGatewayUrlPathMapConfig: Application Gateway
Get-AzureRmApplicationGatewayWebApplicationFirewallConfiguration: Application Gateway
Get-AzureRmBgpServiceCommunity: Networking
Get-AzureRmEffectiveNetworkSecurityGroup: Networking
Get-AzureRmEffectiveRouteTable: Route
Get-AzureRmExpressRouteCircuit: Express Route
Get-AzureRmExpressRouteCircuitARPTable: Express Route
Get-AzureRmExpressRouteCircuitAuthorization: Express Route
Get-AzureRmExpressRouteCircuitPeeringConfig: Express Route
Get-AzureRmExpressRouteCircuitRouteTable: Express Route
Get-AzureRmExpressRouteCircuitRouteTableSummary: Express Route
Get-AzureRmExpressRouteCircuitStats: Express Route
Get-AzureRmExpressRouteServiceProvider: Express Route
Get-AzureRmLoadBalancer: Load Balancer
Get-AzureRmLoadBalancerBackendAddressPoolConfig: Load Balancer
Get-AzureRmLoadBalancerFrontendIpConfig: Load Balancer
Get-AzureRmLoadBalancerInboundNatPoolConfig: Load Balancer
Get-AzureRmLoadBalancerInboundNatRuleConfig: Load Balancer
Get-AzureRmLoadBalancerProbeConfig: Load Balancer
Get-AzureRmLoadBalancerRuleConfig: Load Balancer
Get-AzureRmLocalNetworkGateway: Networking
Get-AzureRmNetworkInterface: Networking
Get-AzureRmNetworkInterfaceIpConfig: Networking
Get-AzureRmNetworkSecurityGroup: Networking
Get-AzureRmNetworkSecurityRuleConfig: Networking
Get-AzureRmNetworkWatcher: Network Watcher
Get-AzureRmNetworkWatcherFlowLogStatus: Network Watcher
Get-AzureRmNetworkWatcherNextHop: Network Watcher
Get-AzureRmNetworkWatcherPacketCapture: Network Watcher
Get-AzureRmNetworkWatcherSecurityGroupView: Network Watcher
Get-AzureRmNetworkWatcherTopology: Network Watcher
Get-AzureRmNetworkWatcherTroubleshootingResult: Network Watcher
Get-AzureRmPublicIpAddress: Networking
Get-AzureRmRouteConfig: Route
Get-AzureRmRouteFilter: Route
Get-AzureRmRouteFilterRuleConfig: Route
Get-AzureRmRouteTable: Route
Get-AzureRmVirtualNetwork: Virtual Network
Get-AzureRmVirtualNetworkGateway: Virtual Network
Get-AzureRmVirtualNetworkGatewayConnection: Virtual Network
Get-AzureRmVirtualNetworkGatewayConnectionSharedKey: Virtual Network
Get-AzureRmVirtualNetworkPeering: Virtual Network
Get-AzureRmVirtualNetworkSubnetConfig: Virtual Network
Get-AzureRmVpnClientPackage: VPN
Get-AzureRmVpnClientRevokedCertificate: VPN
Get-AzureRmVpnClientRootCertificate: VPN
Move-AzureRmExpressRouteCircuit: Express Route
New-AzureRmApplicationGateway: Application Gateway
New-AzureRmApplicationGatewayAuthenticationCertificate: Application Gateway
New-AzureRmApplicationGatewayBackendAddressPool: Application Gateway
New-AzureRmApplicationGatewayBackendHttpSettings: Application Gateway
New-AzureRmApplicationGatewayConnectionDraining: Application Gateway
New-AzureRmApplicationGatewayFrontendIPConfig: Application Gateway
New-AzureRmApplicationGatewayFrontendPort: Application Gateway
New-AzureRmApplicationGatewayHttpListener: Application Gateway
New-AzureRmApplicationGatewayIPConfiguration: Application Gateway
New-AzureRmApplicationGatewayPathRuleConfig: Application Gateway
New-AzureRmApplicationGatewayProbeConfig: Application Gateway
New-AzureRmApplicationGatewayRequestRoutingRule: Application Gateway
New-AzureRmApplicationGatewaySku: Application Gateway
New-AzureRmApplicationGatewaySslCertificate: Application Gateway
New-AzureRmApplicationGatewaySslPolicy: Application Gateway
New-AzureRmApplicationGatewayUrlPathMapConfig: Application Gateway
New-AzureRmApplicationGatewayWebApplicationFirewallConfiguration: Application Gateway
New-AzureRmExpressRouteCircuit: Express Route
New-AzureRmExpressRouteCircuitAuthorization: Express Route
New-AzureRmExpressRouteCircuitPeeringConfig: Express Route
New-AzureRmLoadBalancer: Load Balancer
New-AzureRmLoadBalancerBackendAddressPoolConfig: Load Balancer
New-AzureRmLoadBalancerFrontendIpConfig: Load Balancer
New-AzureRmLoadBalancerInboundNatPoolConfig: Load Balancer
New-AzureRmLoadBalancerInboundNatRuleConfig: Load Balancer
New-AzureRmLoadBalancerProbeConfig: Load Balancer
New-AzureRmLoadBalancerRuleConfig: Load Balancer
New-AzureRmLocalNetworkGateway: Networking
New-AzureRmNetworkInterface: Networking
New-AzureRmNetworkInterfaceIpConfig: Networking
New-AzureRmNetworkSecurityGroup: Networking
New-AzureRmNetworkSecurityRuleConfig: Networking
New-AzureRmNetworkWatcher: Network Watcher
New-AzureRmNetworkWatcherPacketCapture: Network Watcher
New-AzureRmPacketCaptureFilterConfig: Networking
New-AzureRmPublicIpAddress: Networking
New-AzureRmRouteConfig: Route
New-AzureRmRouteFilter: Route
New-AzureRmRouteFilterRuleConfig: Route
New-AzureRmRouteTable: Route
New-AzureRmVirtualNetwork: Virtual Network
New-AzureRmVirtualNetworkGateway: Virtual Network
New-AzureRmVirtualNetworkGatewayConnection: Virtual Network
New-AzureRmVirtualNetworkGatewayIpConfig: Virtual Network
New-AzureRmVirtualNetworkSubnetConfig: Virtual Network
New-AzureRmVpnClientRevokedCertificate: VPN
New-AzureRmVpnClientRootCertificate: VPN
Remove-AzureRmApplicationGateway: Application Gateway
Remove-AzureRmApplicationGatewayAuthenticationCertificate: Application Gateway
Remove-AzureRmApplicationGatewayBackendAddressPool: Application Gateway
Remove-AzureRmApplicationGatewayBackendHttpSettings: Application Gateway
Remove-AzureRmApplicationGatewayConnectionDraining: Application Gateway
Remove-AzureRmApplicationGatewayFrontendIPConfig: Application Gateway
Remove-AzureRmApplicationGatewayFrontendPort: Application Gateway
Remove-AzureRmApplicationGatewayHttpListener: Application Gateway
Remove-AzureRmApplicationGatewayIPConfiguration: Application Gateway
Remove-AzureRmApplicationGatewayProbeConfig: Application Gateway
Remove-AzureRmApplicationGatewayRequestRoutingRule: Application Gateway
Remove-AzureRmApplicationGatewaySslCertificate: Application Gateway
Remove-AzureRmApplicationGatewaySslPolicy: Application Gateway
Remove-AzureRmApplicationGatewayUrlPathMapConfig: Application Gateway
Remove-AzureRmExpressRouteCircuit: Express Route
Remove-AzureRmExpressRouteCircuitAuthorization: Express Route
Remove-AzureRmExpressRouteCircuitPeeringConfig: Express Route
Remove-AzureRmLoadBalancer: Load Balancer
Remove-AzureRmLoadBalancerBackendAddressPoolConfig: Load Balancer
Remove-AzureRmLoadBalancerFrontendIpConfig: Load Balancer
Remove-AzureRmLoadBalancerInboundNatPoolConfig: Load Balancer
Remove-AzureRmLoadBalancerInboundNatRuleConfig: Load Balancer
Remove-AzureRmLoadBalancerProbeConfig: Load Balancer
Remove-AzureRmLoadBalancerRuleConfig: Load Balancer
Remove-AzureRmLocalNetworkGateway: Networking
Remove-AzureRmNetworkInterface: Networking
Remove-AzureRmNetworkInterfaceIpConfig: Networking
Remove-AzureRmNetworkSecurityGroup: Networking
Remove-AzureRmNetworkSecurityRuleConfig: Networking
Remove-AzureRmNetworkWatcher: Network Watcher
Remove-AzureRmNetworkWatcherPacketCapture: Network Watcher
Remove-AzureRmPublicIpAddress: Networking
Remove-AzureRmRouteConfig: Route
Remove-AzureRmRouteFilter: Route
Remove-AzureRmRouteFilterRuleConfig: Route
Remove-AzureRmRouteTable: Route
Remove-AzureRmVirtualNetwork: Virtual Network
Remove-AzureRmVirtualNetworkGateway: Virtual Network
Remove-AzureRmVirtualNetworkGatewayConnection: Virtual Network
Remove-AzureRmVirtualNetworkGatewayDefaultSite: Virtual Network
Remove-AzureRmVirtualNetworkGatewayIpConfig: Virtual Network
Remove-AzureRmVirtualNetworkPeering: Virtual Network
Remove-AzureRmVirtualNetworkSubnetConfig: Virtual Network
Remove-AzureRmVpnClientRevokedCertificate: VPN
Remove-AzureRmVpnClientRootCertificate: VPN
Reset-AzureRmVirtualNetworkGateway: Virtual Network
Reset-AzureRmVirtualNetworkGatewayConnectionSharedKey: Virtual Network
Resize-AzureRmVirtualNetworkGateway: Virtual Network
Set-AzureRmApplicationGateway: Application Gateway
Set-AzureRmApplicationGatewayAuthenticationCertificate: Application Gateway
Set-AzureRmApplicationGatewayBackendAddressPool: Application Gateway
Set-AzureRmApplicationGatewayBackendHttpSettings: Application Gateway
Set-AzureRmApplicationGatewayConnectionDraining: Application Gateway
Set-AzureRmApplicationGatewayFrontendIPConfig: Application Gateway
Set-AzureRmApplicationGatewayFrontendPort: Application Gateway
Set-AzureRmApplicationGatewayHttpListener: Application Gateway
Set-AzureRmApplicationGatewayIPConfiguration: Application Gateway
Set-AzureRmApplicationGatewayProbeConfig: Application Gateway
Set-AzureRmApplicationGatewayRequestRoutingRule: Application Gateway
Set-AzureRmApplicationGatewaySku: Application Gateway
Set-AzureRmApplicationGatewaySslCertificate: Application Gateway
Set-AzureRmApplicationGatewaySslPolicy: Application Gateway
Set-AzureRmApplicationGatewayUrlPathMapConfig: Application Gateway
Set-AzureRmApplicationGatewayWebApplicationFirewallConfiguration: Application Gateway
Set-AzureRmExpressRouteCircuit: Express Route
Set-AzureRmExpressRouteCircuitPeeringConfig: Express Route
Set-AzureRmLoadBalancer: Load Balancer
Set-AzureRmLoadBalancerFrontendIpConfig: Load Balancer
Set-AzureRmLoadBalancerInboundNatPoolConfig: Load Balancer
Set-AzureRmLoadBalancerInboundNatRuleConfig: Load Balancer
Set-AzureRmLoadBalancerProbeConfig: Load Balancer
Set-AzureRmLoadBalancerRuleConfig: Load Balancer
Set-AzureRmLocalNetworkGateway: Networking
Set-AzureRmNetworkInterface: Networking
Set-AzureRmNetworkInterfaceIpConfig: Networking
Set-AzureRmNetworkSecurityGroup: Networking
Set-AzureRmNetworkSecurityRuleConfig: Networking
Set-AzureRmNetworkWatcher: Network Watcher
Set-AzureRmNetworkWatcherConfigFlowLog: Network Watcher
Set-AzureRmPublicIpAddress: Networking
Set-AzureRmRouteConfig: Route
Set-AzureRmRouteFilter: Route
Set-AzureRmRouteFilterRuleConfig: Route
Set-AzureRmRouteTable: Route
Set-AzureRmVirtualNetwork: Virtual Network
Set-AzureRmVirtualNetworkGateway: Virtual Network
Set-AzureRmVirtualNetworkGatewayConnection: Virtual Network
Set-AzureRmVirtualNetworkGatewayConnectionSharedKey: Virtual Network
Set-AzureRmVirtualNetworkGatewayDefaultSite: Virtual Network
Set-AzureRmVirtualNetworkGatewayVpnClientConfig: Virtual Network
Set-AzureRmVirtualNetworkPeering: Virtual Network
Set-AzureRmVirtualNetworkSubnetConfig: Virtual Network
Start-AzureRmApplicationGateway: Application Gateway
Start-AzureRmNetworkWatcherResourceTroubleshooting: Network Watcher
Stop-AzureRmApplicationGateway: Application Gateway
Stop-AzureRmNetworkWatcherPacketCapture: Network Watcher
Test-AzureRmDnsAvailability: DNS
Test-AzureRmNetworkWatcherIPFlow: Network Watcher
Test-AzureRmPrivateIPAddressAvailability: Networking
_isModulePage: true
---

# AzureRM.Network Module
## Description
This topic displays help topics for the Azure Network Cmdlets. 

## AzureRM.Network Cmdlets
### [Add-AzureRmApplicationGatewayBackendAddressPool](./Add-AzureRmApplicationGatewayBackendAddressPool.md)
Adds a back-end address pool to an application gateway.


### [Add-AzureRmApplicationGatewayBackendHttpSettings](./Add-AzureRmApplicationGatewayBackendHttpSettings.md)
Adds back-end HTTP settings to an application gateway.


### [Add-AzureRmApplicationGatewayFrontendIPConfig](./Add-AzureRmApplicationGatewayFrontendIPConfig.md)
Adds a front-end IP configuration to an application gateway.


### [Add-AzureRmApplicationGatewayFrontendPort](./Add-AzureRmApplicationGatewayFrontendPort.md)
Adds a front-end port to an application gateway.


### [Add-AzureRmApplicationGatewayHttpListener](./Add-AzureRmApplicationGatewayHttpListener.md)
Adds an HTTP listener to an application gateway.


### [Add-AzureRmApplicationGatewayIPConfiguration](./Add-AzureRmApplicationGatewayIPConfiguration.md)
Adds an IP configuration to an application gateway.


### [Add-AzureRmApplicationGatewayProbeConfig](./Add-AzureRmApplicationGatewayProbeConfig.md)
Adds a health probe to an Application Gateway.


### [Add-AzureRmApplicationGatewayRequestRoutingRule](./Add-AzureRmApplicationGatewayRequestRoutingRule.md)
Adds a request routing rule to an application gateway.


### [Add-AzureRmApplicationGatewaySslCertificate](./Add-AzureRmApplicationGatewaySslCertificate.md)
Adds an SSL certificate to an application gateway.


### [Add-AzureRmApplicationGatewayUrlPathMapConfig](./Add-AzureRmApplicationGatewayUrlPathMapConfig.md)
Adds an array of URL path mappings to a backend server pool.


### [Add-AzureRmExpressRouteCircuitAuthorization](./Add-AzureRmExpressRouteCircuitAuthorization.md)
Adds an ExpressRoute circuit authorization.


### [Add-AzureRmExpressRouteCircuitPeeringConfig](./Add-AzureRmExpressRouteCircuitPeeringConfig.md)



### [Add-AzureRmLoadBalancerBackendAddressPoolConfig](./Add-AzureRmLoadBalancerBackendAddressPoolConfig.md)
Adds a backend address pool configuration to a load balancer.


### [Add-AzureRmLoadBalancerFrontendIpConfig](./Add-AzureRmLoadBalancerFrontendIpConfig.md)
Adds a front-end IP configuration to a load balancer.


### [Add-AzureRmLoadBalancerInboundNatPoolConfig](./Add-AzureRmLoadBalancerInboundNatPoolConfig.md)



### [Add-AzureRmLoadBalancerInboundNatRuleConfig](./Add-AzureRmLoadBalancerInboundNatRuleConfig.md)
Adds an inbound NAT rule configuration to a load balancer.


### [Add-AzureRmLoadBalancerProbeConfig](./Add-AzureRmLoadBalancerProbeConfig.md)
Adds a probe configuration to a load balancer.


### [Add-AzureRmLoadBalancerRuleConfig](./Add-AzureRmLoadBalancerRuleConfig.md)
Adds a rule configuration to a load balancer.


### [Add-AzureRmNetworkInterfaceIpConfig](./Add-AzureRmNetworkInterfaceIpConfig.md)
Adds a network interface IP configuration to a network interface.


### [Add-AzureRmNetworkSecurityRuleConfig](./Add-AzureRmNetworkSecurityRuleConfig.md)
Adds a network security rule configuration to a network security group.


### [Add-AzureRmRouteConfig](./Add-AzureRmRouteConfig.md)
Adds a route to a route table.

### [Add-AzureRmVirtualNetworkPeering](./Add-AzureRmVirtualNetworkPeering.md)
Creates a peering between two virtual networks.


### [Add-AzureRmVirtualNetworkSubnetConfig](./Add-AzureRmVirtualNetworkSubnetConfig.md)
Adds a subnet configuration to a virtual network.


### [Add-AzureRmVpnClientRevokedCertificate](./Add-AzureRmVpnClientRevokedCertificate.md)
Adds a VPN client-revocation certificate.


### [Add-AzureRmVpnClientRootCertificate](./Add-AzureRmVpnClientRootCertificate.md)
Adds a VPN client root certificate.

### [Get-AzureRmApplicationGatewayBackendAddressPool](./Get-AzureRmApplicationGatewayBackendAddressPool.md)
Gets a back-end address pool for an application gateway.


### [Get-AzureRmApplicationGatewayBackendHttpSettings](./Get-AzureRmApplicationGatewayBackendHttpSettings.md)
Gets the back-end HTTP settings of an application gateway.


### [Get-AzureRmApplicationGatewayFrontendIPConfig](./Get-AzureRmApplicationGatewayFrontendIPConfig.md)
Gets the front-end IP configuration of an application gateway.


### [Get-AzureRmApplicationGatewayFrontendPort](./Get-AzureRmApplicationGatewayFrontendPort.md)
Gets the front-end port of an application gateway.


### [Get-AzureRmApplicationGatewayHttpListener](./Get-AzureRmApplicationGatewayHttpListener.md)
Gets the HTTP listener of an application gateway.


### [Get-AzureRmApplicationGatewayIPConfiguration](./Get-AzureRmApplicationGatewayIPConfiguration.md)
Gets the IP configuration of an application gateway.


### [Get-AzureRmApplicationGatewayProbeConfig](./Get-AzureRmApplicationGatewayProbeConfig.md)
Gets an existing health probe configuration from an Application Gateway.


### [Get-AzureRmApplicationGatewayRequestRoutingRule](./Get-AzureRmApplicationGatewayRequestRoutingRule.md)
Gets the request routing rule of an application gateway.


### [Get-AzureRmApplicationGatewaySku](./Get-AzureRmApplicationGatewaySku.md)
Gets the SKU of an application gateway.


### [Get-AzureRmApplicationGatewaySslCertificate](./Get-AzureRmApplicationGatewaySslCertificate.md)
Gets an SSL certificate for an application gateway.

### [Get-AzureRmApplicationGatewayUrlPathMapConfig](./Get-AzureRmApplicationGatewayUrlPathMapConfig.md)
Gets an array of URL path mappings to a backend server pool.

### [Get-AzureRmApplicationGateway](./Get-AzureRmApplicationGateway.md)
Gets an application gateway.

### [Get-AzureRmExpressRouteCircuitARPTable](./Get-AzureRmExpressRouteCircuitARPTable.md)



### [Get-AzureRmExpressRouteCircuitAuthorization](./Get-AzureRmExpressRouteCircuitAuthorization.md)
Gets information about ExpressRoute circuit authorizations.


### [Get-AzureRmExpressRouteCircuitPeeringConfig](./Get-AzureRmExpressRouteCircuitPeeringConfig.md)



### [Get-AzureRmExpressRouteCircuitRouteTableSummary](./Get-AzureRmExpressRouteCircuitRouteTableSummary.md)



### [Get-AzureRmExpressRouteCircuitRouteTable](./Get-AzureRmExpressRouteCircuitRouteTable.md)



### [Get-AzureRmExpressRouteCircuitStats](./Get-AzureRmExpressRouteCircuitStats.md)



### [Get-AzureRmExpressRouteCircuit](./Get-AzureRmExpressRouteCircuit.md)



### [Get-AzureRmExpressRouteServiceProvider](./Get-AzureRmExpressRouteServiceProvider.md)



### [Get-AzureRmLoadBalancerBackendAddressPoolConfig](./Get-AzureRmLoadBalancerBackendAddressPoolConfig.md)
Gets a backend address pool configuration for a load balancer.


### [Get-AzureRmLoadBalancerFrontendIpConfig](./Get-AzureRmLoadBalancerFrontendIpConfig.md)
Gets a front-end IP configuration in a load balancer.


### [Get-AzureRmLoadBalancerInboundNatPoolConfig](./Get-AzureRmLoadBalancerInboundNatPoolConfig.md)



### [Get-AzureRmLoadBalancerInboundNatRuleConfig](./Get-AzureRmLoadBalancerInboundNatRuleConfig.md)
Gets an inbound NAT rule configuration for a load balancer.


### [Get-AzureRmLoadBalancerProbeConfig](./Get-AzureRmLoadBalancerProbeConfig.md)
Gets a probe configuration for a load balancer.


### [Get-AzureRmLoadBalancerRuleConfig](./Get-AzureRmLoadBalancerRuleConfig.md)
Gets the rule configuration for a load balancer.


### [Get-AzureRmLoadBalancer](./Get-AzureRmLoadBalancer.md)
Gets a load balancer.


### [Get-AzureRmLocalNetworkGateway](./Get-AzureRmLocalNetworkGateway.md)



### [Get-AzureRmNetworkInterfaceIpConfig](./Get-AzureRmNetworkInterfaceIpConfig.md)
Gets a network interface IP configuration for a network interface.


### [Get-AzureRmNetworkInterface](./Get-AzureRmNetworkInterface.md)
Gets a network interface.


### [Get-AzureRmNetworkSecurityGroup](./Get-AzureRmNetworkSecurityGroup.md)
Gets a network security group.


### [Get-AzureRmNetworkSecurityRuleConfig](./Get-AzureRmNetworkSecurityRuleConfig.md)
Get a network security rule configuration for a network security group.


### [Get-AzureRmPublicIpAddress](./Get-AzureRmPublicIpAddress.md)
Gets a public IP address.


### [Get-AzureRmRouteConfig](./Get-AzureRmRouteConfig.md)
Gets routes from a route table.


### [Get-AzureRmRouteTable](./Get-AzureRmRouteTable.md)
Gets route tables.


### [Get-AzureRmVirtualNetworkGatewayConnectionSharedKey](./Get-AzureRmVirtualNetworkGatewayConnectionSharedKey.md)



### [Get-AzureRmVirtualNetworkGatewayConnection](./Get-AzureRmVirtualNetworkGatewayConnection.md)



### [Get-AzureRmVirtualNetworkGateway](./Get-AzureRmVirtualNetworkGateway.md)



### [Get-AzureRmVirtualNetworkPeering](./Get-AzureRmVirtualNetworkPeering.md)
Gets the virtual network peering.


### [Get-AzureRmVirtualNetworkSubnetConfig](./Get-AzureRmVirtualNetworkSubnetConfig.md)
Gets a subnet in a virtual network.


### [Get-AzureRmVirtualNetwork](./Get-AzureRmVirtualNetwork.md)
Gets a virtual network in a resource group.


### [Get-AzureRmVpnClientPackage](./Get-AzureRmVpnClientPackage.md)
Gets information about a VPN client package.


### [Get-AzureRmVpnClientRevokedCertificate](./Get-AzureRmVpnClientRevokedCertificate.md)
Gets information about VPN client-revocation certificates.


### [Get-AzureRmVpnClientRootCertificate](./Get-AzureRmVpnClientRootCertificate.md)
Gets information about VPN root certificates.


### [Move-AzureRmExpressRouteCircuit](./Move-AzureRmExpressRouteCircuit.md)



### [New-AzureRmApplicationGatewayBackendAddressPool](./New-AzureRmApplicationGatewayBackendAddressPool.md)
Creates a back-end address pool for an application gateway.


### [New-AzureRmApplicationGatewayBackendHttpSettings](./New-AzureRmApplicationGatewayBackendHttpSettings.md)
Creates back-end HTTP settings for an application gateway.


### [New-AzureRmApplicationGatewayFrontendIPConfig](./New-AzureRmApplicationGatewayFrontendIPConfig.md)
Creates a front-end IP configuration for an application gateway.


### [New-AzureRmApplicationGatewayFrontendPort](./New-AzureRmApplicationGatewayFrontendPort.md)
Creates a front-end port for an application gateway.


### [New-AzureRmApplicationGatewayHttpListener](./New-AzureRmApplicationGatewayHttpListener.md)
Creates an HTTP listener for an application gateway.


### [New-AzureRmApplicationGatewayIPConfiguration](./New-AzureRmApplicationGatewayIPConfiguration.md)
Creates an IP configuration for an application gateway.


### [New-AzureRmApplicationGatewayPathRuleConfig](./New-AzureRmApplicationGatewayPathRuleConfig.md)
Creates an application gateway path rule.


### [New-AzureRmApplicationGatewayProbeConfig](./New-AzureRmApplicationGatewayProbeConfig.md)
Creates a health probe.


### [New-AzureRmApplicationGatewayRequestRoutingRule](./New-AzureRmApplicationGatewayRequestRoutingRule.md)
Creates a request routing rule for an application gateway.


### [New-AzureRmApplicationGatewaySku](./New-AzureRmApplicationGatewaySku.md)
Creates a SKU for an application gateway.


### [New-AzureRmApplicationGatewaySslCertificate](./New-AzureRmApplicationGatewaySslCertificate.md)
Creates an SSL certificate for an Azure application gateway.

### [New-AzureRmApplicationGatewayUrlPathMapConfig](./New-AzureRmApplicationGatewayUrlPathMapConfig.md)
Creates an array of URL path mappings to a backend server pool.

### [New-AzureRmApplicationGateway](./New-AzureRmApplicationGateway.md)
Creates an application gateway.


### [New-AzureRmExpressRouteCircuitAuthorization](./New-AzureRmExpressRouteCircuitAuthorization.md)
Creates an ExpressRoute circuit authorization.


### [New-AzureRmExpressRouteCircuitPeeringConfig](./New-AzureRmExpressRouteCircuitPeeringConfig.md)



### [New-AzureRmExpressRouteCircuit](./New-AzureRmExpressRouteCircuit.md)
Creates an Azure express route circuit.


### [New-AzureRmLoadBalancerBackendAddressPoolConfig](./New-AzureRmLoadBalancerBackendAddressPoolConfig.md)
Creates a backend address pool configuration for a load balancer.


### [New-AzureRmLoadBalancerFrontendIpConfig](./New-AzureRmLoadBalancerFrontendIpConfig.md)
Creates a front-end IP configuration for a load balancer.


### [New-AzureRmLoadBalancerInboundNatPoolConfig](./New-AzureRmLoadBalancerInboundNatPoolConfig.md)



### [New-AzureRmLoadBalancerInboundNatRuleConfig](./New-AzureRmLoadBalancerInboundNatRuleConfig.md)
Creates an inbound NAT rule configuration for a load balancer.


### [New-AzureRmLoadBalancerProbeConfig](./New-AzureRmLoadBalancerProbeConfig.md)
Creates a probe configuration for a load balancer.


### [New-AzureRmLoadBalancerRuleConfig](./New-AzureRmLoadBalancerRuleConfig.md)
Creates a rule configuration for a load balancer.


### [New-AzureRmLoadBalancer](./New-AzureRmLoadBalancer.md)
Creates a load balancer.


### [New-AzureRmLocalNetworkGateway](./New-AzureRmLocalNetworkGateway.md)



### [New-AzureRmNetworkInterfaceIpConfig](./New-AzureRmNetworkInterfaceIpConfig.md)
Creates a network interface IP configuration.


### [New-AzureRmNetworkInterface](./New-AzureRmNetworkInterface.md)
Creates a network interface.


### [New-AzureRmNetworkSecurityGroup](./New-AzureRmNetworkSecurityGroup.md)
Creates a network security group.


### [New-AzureRmNetworkSecurityRuleConfig](./New-AzureRmNetworkSecurityRuleConfig.md)
Creates a network security rule configuration.


### [New-AzureRmPublicIpAddress](./New-AzureRmPublicIpAddress.md)
Creates a public IP address.


### [New-AzureRmRouteConfig](./New-AzureRmRouteConfig.md)
Creates a route for a route table.


### [New-AzureRmRouteTable](./New-AzureRmRouteTable.md)
Creates a route table.


### [New-AzureRmVirtualNetworkGatewayConnection](./New-AzureRmVirtualNetworkGatewayConnection.md)



### [New-AzureRmVirtualNetworkGatewayIpConfig](./New-AzureRmVirtualNetworkGatewayIpConfig.md)



### [New-AzureRmVirtualNetworkGateway](./New-AzureRmVirtualNetworkGateway.md)



### [New-AzureRmVirtualNetworkSubnetConfig](./New-AzureRmVirtualNetworkSubnetConfig.md)
Creates a virtual network subnet configuration.


### [New-AzureRmVirtualNetwork](./New-AzureRmVirtualNetwork.md)
Creates a virtual network.


### [New-AzureRmVpnClientRevokedCertificate](./New-AzureRmVpnClientRevokedCertificate.md)
Creates a new VPN client-revocation certificate.


### [New-AzureRmVpnClientRootCertificate](./New-AzureRmVpnClientRootCertificate.md)
Creates a new VPN client root certificate.

### [Remove-AzureRmApplicationGatewayBackendAddressPool](./Remove-AzureRmApplicationGatewayBackendAddressPool.md)
Removes a back-end address pool from an application gateway.


### [Remove-AzureRmApplicationGatewayBackendHttpSettings](./Remove-AzureRmApplicationGatewayBackendHttpSettings.md)
Removes back-end HTTP settings from an application gateway.


### [Remove-AzureRmApplicationGatewayFrontendIPConfig](./Remove-AzureRmApplicationGatewayFrontendIPConfig.md)
Removes a front-end IP configuration from an application gateway.


### [Remove-AzureRmApplicationGatewayFrontendPort](./Remove-AzureRmApplicationGatewayFrontendPort.md)
Removes a front-end port from an application gateway.


### [Remove-AzureRmApplicationGatewayHttpListener](./Remove-AzureRmApplicationGatewayHttpListener.md)
Removes an HTTP listener from an application gateway.


### [Remove-AzureRmApplicationGatewayIPConfiguration](./Remove-AzureRmApplicationGatewayIPConfiguration.md)
Removes an IP configuration from an application gateway.


### [Remove-AzureRmApplicationGatewayProbeConfig](./Remove-AzureRmApplicationGatewayProbeConfig.md)
Removes a health probe from an existing application gateway.


### [Remove-AzureRmApplicationGatewayRequestRoutingRule](./Remove-AzureRmApplicationGatewayRequestRoutingRule.md)
Removes a request routing rule from an application gateway.


### [Remove-AzureRmApplicationGatewaySslCertificate](./Remove-AzureRmApplicationGatewaySslCertificate.md)
Removes an SSL certificate from an Azure application gateway.


### [Remove-AzureRmApplicationGatewayUrlPathMapConfig](./Remove-AzureRmApplicationGatewayUrlPathMapConfig.md)
Removes URL path mappings to a backend server pool.


### [Remove-AzureRmApplicationGateway](./Remove-AzureRmApplicationGateway.md)
Removes an application gateway.


### [Remove-AzureRmExpressRouteCircuitAuthorization](./Remove-AzureRmExpressRouteCircuitAuthorization.md)
Removes an existing ExpressRoute configuration authorization.


### [Remove-AzureRmExpressRouteCircuitPeeringConfig](./Remove-AzureRmExpressRouteCircuitPeeringConfig.md)
Removes an ExpressRoute circuit peering configuration.


### [Remove-AzureRmExpressRouteCircuit](./Remove-AzureRmExpressRouteCircuit.md)
Removes an ExpressRoute circuit.


### [Remove-AzureRmLoadBalancerBackendAddressPoolConfig](./Remove-AzureRmLoadBalancerBackendAddressPoolConfig.md)
Removes a backend address pool configuration from a load balancer.


### [Remove-AzureRmLoadBalancerFrontendIpConfig](./Remove-AzureRmLoadBalancerFrontendIpConfig.md)
Removes a front-end IP configuration from a load balancer.


### [Remove-AzureRmLoadBalancerInboundNatPoolConfig](./Remove-AzureRmLoadBalancerInboundNatPoolConfig.md)



### [Remove-AzureRmLoadBalancerInboundNatRuleConfig](./Remove-AzureRmLoadBalancerInboundNatRuleConfig.md)
Removes an inbound NAT rule configuration from a load balancer.


### [Remove-AzureRmLoadBalancerProbeConfig](./Remove-AzureRmLoadBalancerProbeConfig.md)
Removes a probe configuration from a load balancer.


### [Remove-AzureRmLoadBalancerRuleConfig](./Remove-AzureRmLoadBalancerRuleConfig.md)
Removes a rule configuration for a load balancer.


### [Remove-AzureRmLoadBalancer](./Remove-AzureRmLoadBalancer.md)
Removes a load balancer.


### [Remove-AzureRmLocalNetworkGateway](./Remove-AzureRmLocalNetworkGateway.md)
Removes a local network gateway.


### [Remove-AzureRmNetworkInterfaceIpConfig](./Remove-AzureRmNetworkInterfaceIpConfig.md)
Removes a network interface IP configuration from a network interface.


### [Remove-AzureRmNetworkInterface](./Remove-AzureRmNetworkInterface.md)
Removes a network interface.


### [Remove-AzureRmNetworkSecurityGroup](./Remove-AzureRmNetworkSecurityGroup.md)
Removes a network security group.


### [Remove-AzureRmNetworkSecurityRuleConfig](./Remove-AzureRmNetworkSecurityRuleConfig.md)
Removes a network security rule from a network security group.


### [Remove-AzureRmPublicIpAddress](./Remove-AzureRmPublicIpAddress.md)
Removes a public IP address.


### [Remove-AzureRmRouteConfig](./Remove-AzureRmRouteConfig.md)
Removes a route from a route table.


### [Remove-AzureRmRouteTable](./Remove-AzureRmRouteTable.md)
Removes a route table.


### [Remove-AzureRmVirtualNetworkGatewayConnection](./Remove-AzureRmVirtualNetworkGatewayConnection.md)
Removes a virtual network gateway connection.


### [Remove-AzureRmVirtualNetworkGatewayDefaultSite](./Remove-AzureRmVirtualNetworkGatewayDefaultSite.md)
Removes the default site from a virtual network gateway.

### [Remove-AzureRmVirtualNetworkGateway](./Remove-AzureRmVirtualNetworkGateway.md)
Removes a virtual network gateway.


### [Remove-AzureRmVirtualNetworkPeering](./Remove-AzureRmVirtualNetworkPeering.md)



### [Remove-AzureRmVirtualNetworkSubnetConfig](./Remove-AzureRmVirtualNetworkSubnetConfig.md)
Removes a subnet configuration from a virtual network.


### [Remove-AzureRmVirtualNetwork](./Remove-AzureRmVirtualNetwork.md)
Removes a virtual network.


### [Remove-AzureRmVpnClientRevokedCertificate](./Remove-AzureRmVpnClientRevokedCertificate.md)
Removes a VPN client-revocation certificate.


### [Remove-AzureRmVpnClientRootCertificate](./Remove-AzureRmVpnClientRootCertificate.md)
Removes an existing VPN client root certificate.


### [Reset-AzureRmVirtualNetworkGatewayConnectionSharedKey](./Reset-AzureRmVirtualNetworkGatewayConnectionSharedKey.md)



### [Reset-AzureRmVirtualNetworkGateway](./Reset-AzureRmVirtualNetworkGateway.md)



### [Resize-AzureRmVirtualNetworkGateway](./Resize-AzureRmVirtualNetworkGateway.md)
Resizes an existing virtual network gateway.

### [Set-AzureRmApplicationGatewayBackendAddressPool](./Set-AzureRmApplicationGatewayBackendAddressPool.md)
Updates a back-end address pool for an application gateway.


### [Set-AzureRmApplicationGatewayBackendHttpSettings](./Set-AzureRmApplicationGatewayBackendHttpSettings.md)
Updates back-end HTTP settings for an application gateway.


### [Set-AzureRmApplicationGatewayFrontendIPConfig](./Set-AzureRmApplicationGatewayFrontendIPConfig.md)
Modifies a front-end IP address configuration.


### [Set-AzureRmApplicationGatewayFrontendPort](./Set-AzureRmApplicationGatewayFrontendPort.md)
Modifies a front-end port for an application gateway.


### [Set-AzureRmApplicationGatewayHttpListener](./Set-AzureRmApplicationGatewayHttpListener.md)
Modifies an HTTP listener for an application gateway.


### [Set-AzureRmApplicationGatewayIPConfiguration](./Set-AzureRmApplicationGatewayIPConfiguration.md)
Modifies an IP configuration for an application gateway.


### [Set-AzureRmApplicationGatewayProbeConfig](./Set-AzureRmApplicationGatewayProbeConfig.md)
Sets the health probe configuration on an existing Application Gateway.


### [Set-AzureRmApplicationGatewayRequestRoutingRule](./Set-AzureRmApplicationGatewayRequestRoutingRule.md)
Modifies a request routing rule for an application gateway.


### [Set-AzureRmApplicationGatewaySku](./Set-AzureRmApplicationGatewaySku.md)
Modifies the SKU of an application gateway.


### [Set-AzureRmApplicationGatewaySslCertificate](./Set-AzureRmApplicationGatewaySslCertificate.md)
Sets the goal state of an SSL certificate.

### [Set-AzureRmApplicationGatewayUrlPathMapConfig](./Set-AzureRmApplicationGatewayUrlPathMapConfig.md)
Sets configuration for an array of URL path mappings to a backend server pool.

### [Set-AzureRmApplicationGateway](./Set-AzureRmApplicationGateway.md)
Updates an application gateway.


### [Set-AzureRmExpressRouteCircuitPeeringConfig](./Set-AzureRmExpressRouteCircuitPeeringConfig.md)



### [Set-AzureRmExpressRouteCircuit](./Set-AzureRmExpressRouteCircuit.md)
Modifies an ExpressRoute circuit.


### [Set-AzureRmLoadBalancerFrontendIpConfig](./Set-AzureRmLoadBalancerFrontendIpConfig.md)
Sets the goal state for a front-end IP configuration in a load balancer.


### [Set-AzureRmLoadBalancerInboundNatPoolConfig](./Set-AzureRmLoadBalancerInboundNatPoolConfig.md)



### [Set-AzureRmLoadBalancerInboundNatRuleConfig](./Set-AzureRmLoadBalancerInboundNatRuleConfig.md)
Sets an inbound NAT rule configuration for a load balancer.


### [Set-AzureRmLoadBalancerProbeConfig](./Set-AzureRmLoadBalancerProbeConfig.md)
Sets the goal state for a probe configuration.


### [Set-AzureRmLoadBalancerRuleConfig](./Set-AzureRmLoadBalancerRuleConfig.md)
Sets the goal state for a load balancer rule configuration.


### [Set-AzureRmLoadBalancer](./Set-AzureRmLoadBalancer.md)
Sets the goal state for a load balancer.


### [Set-AzureRmLocalNetworkGateway](./Set-AzureRmLocalNetworkGateway.md)
Modifies a local network gateway.


### [Set-AzureRmNetworkInterfaceIpConfig](./Set-AzureRmNetworkInterfaceIpConfig.md)
Sets the goal state for an Azure network interface IP configuration.


### [Set-AzureRmNetworkInterface](./Set-AzureRmNetworkInterface.md)
Sets the goal state for a network interface.


### [Set-AzureRmNetworkSecurityGroup](./Set-AzureRmNetworkSecurityGroup.md)
Sets the goal state for a network security group.


### [Set-AzureRmNetworkSecurityRuleConfig](./Set-AzureRmNetworkSecurityRuleConfig.md)
Sets the goal state for a network security rule configuration.


### [Set-AzureRmPublicIpAddress](./Set-AzureRmPublicIpAddress.md)
Sets the goal state for a public IP address.


### [Set-AzureRmRouteConfig](./Set-AzureRmRouteConfig.md)
Sets the goal state for a route.


### [Set-AzureRmRouteTable](./Set-AzureRmRouteTable.md)
Sets the goal state for a route table.


### [Set-AzureRmVirtualNetworkGatewayConnectionSharedKey](./Set-AzureRmVirtualNetworkGatewayConnectionSharedKey.md)
Configures the shared key of the virtual network gateway connection.


### [Set-AzureRmVirtualNetworkGatewayConnection](./Set-AzureRmVirtualNetworkGatewayConnection.md)
Configures a virtual network gateway connection.


### [Set-AzureRmVirtualNetworkGatewayDefaultSite](./Set-AzureRmVirtualNetworkGatewayDefaultSite.md)
Sets the default site for a virtual network gateway.


### [Set-AzureRmVirtualNetworkGatewayVpnClientConfig](./Set-AzureRmVirtualNetworkGatewayVpnClientConfig.md)
Sets the VPN client address pool for a virtual network gateway.


### [Set-AzureRmVirtualNetworkGateway](./Set-AzureRmVirtualNetworkGateway.md)
Updates a virtual network gateway.


### [Set-AzureRmVirtualNetworkPeering](./Set-AzureRmVirtualNetworkPeering.md)
Configures a virtual network peering.


### [Set-AzureRmVirtualNetworkSubnetConfig](./Set-AzureRmVirtualNetworkSubnetConfig.md)
Configures the goal state for a subnet configuration in a virtual network.


### [Set-AzureRmVirtualNetwork](./Set-AzureRmVirtualNetwork.md)
Sets the goal state for a virtual network.


### [Start-AzureRmApplicationGateway](./Start-AzureRmApplicationGateway.md)
Starts an application gateway.


### [Stop-AzureRmApplicationGateway](./Stop-AzureRmApplicationGateway.md)
Stops an application gateway


### [Test-AzureRmDnsAvailability](./Test-AzureRmDnsAvailability.md)


